fix issue with button not showing up

--- a/app/assets/stylesheets/petition.css.scss
+++ b/app/assets/stylesheets/petition.css.scss
@@ -187,6 +187,8 @@
 }
 #thanksModal, #thanks-for-signing-message, #mobile_thanks {
   .btn.fb_no_f_share {
+    height: 63px;
+    width: 147px;
     background: url("fb_no_f.png");
     &:hover {
       background: url("fb_no_f_hover.png");
